# cornelius

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cornelius.sh  init.sh  run-tests  subjects.xml
.github/workflows/: run-tests.yml
cornelius/: CHANGELOG.markdown  Cargo.toml  README.markdown
cornelius/src/: cli.rs  config.rs  delta.rs  evaluator.rs  global_data.rs  lib.rs  main.rs  peg.rs  primitives.rs  rewrites.rs  subjects.rs  tests.rs  util.rs
framework/scripts/: FieldAccess.java  clean.sh  cornelius.sh  init.sh  install_all.sh  install_major.sh  install_regularizer.sh  install_serializer.sh  mutate.sh  regularize.sh  run.sh  serialize.sh  util.sh
framework/scripts/mutants/1/: FieldAccess.java
framework/scripts/mutants/2/: FieldAccess.java
framework/scripts/mutants/3/: FieldAccess.java
framework/scripts/mutants/4/: FieldAccess.java
framework/scripts/mutants/5/: FieldAccess.java
framework/scripts/mutants/6/: FieldAccess.java
framework/scripts/mutants/7/: FieldAccess.java
framework/scripts/mutants/8/: FieldAccess.java
framework/scripts/mutants/9/: FieldAccess.java
serializer/: .gitignore  README.markdown  pom.xml  serialize.sh
serializer/pegnodes/: CHANGELOG.md  README.md  project.clj  run-tests.sh
serializer/pegnodes/doc/: intro.md
serializer/pegnodes/src/pegnodes/: core.clj  pegs.clj
serializer/pegnodes/test/pegnodes/: core_test.clj
serializer/tests/: serialize-subjects.sh  test-subjects.txt
serializer/tests/simple/: MethodDecls.java
serializer/tests/subjects/: .gitignore  README.markdown
serializer/tests/subjects/bit-twiddle/: BitTwiddle.java  gt
serializer/tests/subjects/casts/: Casts.java
serializer/tests/subjects/data-flow/: DataFlow.java
serializer/tests/subjects/days-in-month/: DaysInMonth.java
serializer/tests/subjects/debug-output/: Failures.java
src/: delta.rs  expr.rs  main.rs  peg.rs  rewrites.rs  subjects.rs  tests.rs
tests/: casts.xml  field-access.gt  field-access.xml  field-write.gt  field-write.xml  loops.xml  method-invocation.gt  method-invocation.xml  triangle.xml
(+614 files in other folders)
